<resources>
    <string name="app_name">UserAuthGitHub</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="subject">subject</string>
    <string name="message">message*</string>
    <string name="submit">Submit</string>
    <string name="feedback">Feedback</string>
    <string name="select_image">+ Add Screenshot</string>
</resources>
